Fixed some styling issues on mobile

--- a/src/app/components/body/body.component.scss
+++ b/src/app/components/body/body.component.scss
@@ -6,18 +6,25 @@
 
 .wavesContainer {
   height: 50%;
-  top: 0;
-  left: 0;
+  width: 110%;
+  // top: 0;
+  // left: 0;
+  // outline: 2px solid;
+  // border: 2px solid;
 }
 
 .bodyContainer {
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
 }
 
 .bodySpacer {
-  height: 50%;
+  height: 55%;
+  // visibility: hidden;
 }
 
 .contentContainer {
