--- a/src/app/components/bookmarksgrid/bookmarksgrid.component.scss
+++ b/src/app/components/bookmarksgrid/bookmarksgrid.component.scss
@@ -43,3 +43,10 @@
 .bookmarkIcon {
   font-size: 3rem;
 }
+
+@media only screen and (max-width: 400px) {
+  .gridItem {
+    width: 8rem;
+    height: 6rem;
+  }
+}
