--- a/src/app/components/preferences/preferences.component.scss
+++ b/src/app/components/preferences/preferences.component.scss
@@ -74,6 +74,7 @@
         background-color: transparent;
         border: none;
         cursor: pointer;
+        font-size: 1rem;
       }
 
       .colorInput::-webkit-color-swatch {
