--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,12 @@ body {
   opacity: 0.9;
   transform: translate(3%, 3%);
 }
+
+@media only screen and (max-width: 400px) {
+  body {
+    overflow-x: hidden;
+    overflow-y: scroll;
+    height: 125vh;
+    max-width: 100vw;
+  }
+}
